# AdventOfCode

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build_and_test.yml  lint_and_test.yml  run_tests.yml
aoc-solver-derive/: Cargo.toml
aoc-solver-derive/src/: lib.rs  main_processor.rs  registry.rs  utils.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: scaffold.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  puzzle.rs  puzzle_part.rs  runner.rs  solution_macro.rs  solver.rs
core/src/cli/commands/: scaffold.rs
core/src/macros/: solver.rs
days/day_01/: Cargo.toml
days/day_01/src/: lib.rs
days/day_02/: Cargo.toml
days/day_02/src/: lib.rs
days/day_03/: Cargo.toml
days/day_03/src/: lib.rs
days/day_04/: Cargo.toml
days/day_04/src/: lib.rs
days/day_05/: Cargo.toml
days/day_05/src/: lib.rs
days/day_06/: Cargo.toml
days/day_06/src/: lib.rs
days/day_07/: Cargo.toml
days/day_07/src/: lib.rs
days/day_08/: Cargo.toml
days/day_08/src/: lib.rs
days/day_09/: Cargo.toml
days/day_09/src/: lib.rs
days/day_1/: Cargo.toml  README.md
days/day_1/src/: lib.rs  main.rs
days/day_10/: Cargo.toml
days/day_10/src/: lib.rs
days/day_11/: Cargo.toml
days/day_11/src/: lib.rs
days/day_12/: Cargo.toml
days/day_12/src/: lib.rs
days/day_13/: Cargo.toml
days/day_13/src/: lib.rs
days/day_14/: Cargo.toml
days/day_14/src/: grid.rs  lib.rs
days/day_15/: Cargo.toml
days/day_15/src/: lib.rs
days/day_16/: Cargo.toml
days/day_16/src/: lib.rs
days/day_17/: Cargo.toml
days/day_17/src/: lib.rs
days/day_18/: Cargo.toml
days/day_18/src/: lib.rs
days/day_19/: Cargo.toml
days/day_19/src/: lib.rs
days/day_2/: Cargo.toml
days/day_2/src/: lib.rs  main.rs
days/day_20/: Cargo.toml
days/day_20/src/: lib.rs
days/day_21/: Cargo.toml
days/day_22/: Cargo.toml
days/day_23/: Cargo.toml
days/day_24/: Cargo.toml
days/day_25/: Cargo.toml
days/day_3/: Cargo.toml
days/day_4/: Cargo.toml
days/day_5/: Cargo.toml
days/day_6/: Cargo.toml
days/day_7/: Cargo.toml
days/day_8/: Cargo.toml
days/day_9/: Cargo.toml
src/core/: Cargo.toml
(+31 files in other folders)
