[workspace]
resolver = "2"
members = ["aoc-solver-derive", "core", "puzzles/*/*", "days/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Stephen Kelzer <stephen@stephenkelzer.com>"]

[workspace.dependencies]
core = { path = "core" }
aoc-solver-derive = { path = "aoc-solver-derive" }
rayon = "1.8.0"
itertools = "0.12.0"
num = "0.4.1"

# run in release mode by default
[profile.dev]
opt-level = 3
debug = false

# run tests in release mode by default
[profile.test]
opt-level = 3
debug = false
