[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core.workspace = true
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
