[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "cli"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[dependencies]
dotenvy = "0.15.7"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
paste = "1.0.14"
